Globals and DB context UOW have been implemented by using DI

--- a/HealthCare.API/appsettings.json
+++ b/HealthCare.API/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare;Trusted_Connection=True;"
 }
