IIS debug opeartions completed

--- a/HealthCare.API/appsettings.json
+++ b/HealthCare.API/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare;Trusted_Connection=True;"
+  "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare; user=sa; password=Password**1;"
 }
