User Registration and Login operation APIs have completed

--- a/HealthCare.API/appsettings.json
+++ b/HealthCare.API/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,5 +7,14 @@
     }
   },
   "AllowedHosts": "*",
-  "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare; user=sa; password=Password**1;"
+  
+  "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare; user=sa; password=Password**1;",
+
+  "JWTSettings": {
+    "SecretKey": "BU benim secret keyim",
+    "Issuer": "HealthCare Api",
+    "ExpireDays": "15"
+  },
+
+  "Salt": "ŞifreİçinSaltDeğerim"
 }
