hardcoded parameters are moved to appsettings.json file

--- a/HealthCare.API/appsettings.json
+++ b/HealthCare.API/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  
+  "AllowedHosts": "localhost",
+  "AllowedOrigins": "http://localhost:15000;http://localhost:15001",
   "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare; user=sa; password=Password**1;",
 
   "JWTSettings": {
