localization without taghelper completed

--- a/HealthCare.UI/HealthCare.UI.csproj
+++ b/HealthCare.UI/HealthCare.UI.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\HealthCare.Model\HealthCare.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
