lokalde çalıştırma için kodlar

--- a/HealthCare.API/appsettings.json
+++ b/HealthCare.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "localhost",
   "AllowedOrigins": "http://localhost:15000;http://localhost:15001",
-  "HealthCareDBConnectionString": "Server=.\\SQLExpress;Database=HealthCare; user=sa; password=Password**1;",
+  "HealthCareDBConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HealthCareDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
 
   "JWTSettings": {
     "SecretKey": "BU benim secret keyim",
