--- a/HealthCare.UI/HealthCare.UI.csproj
+++ b/HealthCare.UI/HealthCare.UI.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="wwwroot\images\OurServices\" />
   </ItemGroup>
 
 </Project>
