--- a/HealthCare.UI/web.config
+++ b/HealthCare.UI/web.config
@@ -5,9 +5,10 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="C:\Users\MehmetFatihAkan\Desktop\healthcare\HealthCare.UI\bin\Debug\netcoreapp3.0\HealthCare.UI.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+          <environmentVariable name="COMPLUS_ForceENC" value="1" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
